--- a/demoProject/src/app/app.component.html
+++ b/demoProject/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--WEATHER COMPONENT-->
 
-<!--<div style="margin:20px;">
+<div style="margin:20px;">
     <cf-weather [settings]="demoWeather" (onDoubleClick)="log('Mouse Double Clicked')" (onMouseEnter)="log('Mouse Entered')" (onMouseLeave)="log('Mouse Left')">
     </cf-weather>
 </div>
@@ -8,7 +8,7 @@
 <div style="text-align: left; margin:20px;">
     <h4>Business Component events:</h4>
     <div>{{ compEvents }}</div>
-</div>-->
+</div>
 
 
 <!--NEWS COMPONENT-->
