--- a/src/lib/src/components/core-business/core-business.component.html
+++ b/src/lib/src/components/core-business/core-business.component.html
@@ -17,7 +17,7 @@
                     <div class="settings">
                         <div [ngTemplateOutlet]="cfSettings" [ngOutletContext]="{cfItem: item, cfComponentSidenav: cfComponentSidenav}"></div>
                     </div>
-                    <div id="settingsButtons" align="end">
+                    <div align="end">
                         <cf-button md-button style="display:inline-block; margin-top:10px; margin-right:10px;" [properties]="cancelButton" [styling]="buttonStyling" (onClick)="cancel()"></cf-button>
                         <cf-button md-button style="display:inline-block; margin-top:10px; margin-right:10px;" [properties]="doneButton" [styling]="buttonStyling" (onClick)="done()"></cf-button>
                     </div>
